<resources>
    <string name="app_name">UAS_197064516002_MuhammadMahivaBentarRaharja</string>
    <string name="input_nama">Nama Lengkap</string>
    <string name="input_tanggal">Tanggal Lahir</string>
    <string name="input_tempat">Tempat Lahir</string>
    <string name="input_tlpn">No. Telepon</string>
    <string name="input_email">Email</string>
    <string name="btn_simpan">Simpan Data</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_tanggal">Tanggal Lahir</string>
    <string name="tv_tempat">Tenpat Lahir</string>
    <string name="tv_no">Nomor Telepon</string>
    <string name="tv_email">Email</string>
</resources>